Update src/main/java/org/example/productservice/productlike/application/ProductLikeServiceImpl.java
getLast()는 LinkedList 클래스에서 제공하는 메소드로, 리스트의 마지막 요소를 리턴한다.
리스트가 비어있을 경우 NoSuchElementException 예외를 발생시킨다.

자바 21버전에서 새로 추가된 기능이야.

Co-authored-by: Copilot <175728472+Copilot@users.noreply.github.com>